--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Exam-DDI-SpringBoot"]
 	path = Exam-DDI-SpringBoot
 	url = https://github.com/alex55fc/Exam-DDI-SpringBoot
+[submodule "Exam-PSP-ProcessesAndThreads"]
+	path = Exam-PSP-ProcessesAndThreads
+	url = https://github.com/alex55fc/Exam-PSP-ProcessesAndThreads
